# netawait

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix
libroute/: Cargo.toml
libroute/src/: addresses.rs  header.rs  lib.rs  link.rs  route.rs  socket.rs
pkg/: Cargo.toml
pkg/src/: _bindings.rs  flags.rs  lib.rs  main.rs
route-sys/: .gitignore  Cargo.toml  wrapper.h
route-sys/src/: lib.rs
src/: lib.rs  socket.rs
src/system/: addresses.rs  header.rs  mod.rs  route.rs  socket.rs
