[package]
name = "libroute"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
nix = { version = "0.28.0", features = ["event", "net", "socket"] }
route-sys = { path = "../route-sys" }
thiserror = "1.0.57"
